# okane-finance-api

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  HMM_README.md  PR_DETAILS.md  README.md  backtest.txt  build-push-deploy.sh  debug_db.py  debug_db2.py  docker-compose.yml  docker-entrypoint.sh  get_schema.py  get_view.py  get_view2.py  get_view3.py  pyproject.toml  requirements.txt  staged_diff.txt  staged_diff_summary.txt  test_check_ny_data.py  test_debug_sessions.py  test_orb_both_sessions.py  test_orb_fix.py  us_stock_marketcap.py
.chainlit/: config.toml
.claude/: settings.local.json
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml
.planning/feature-enhancement/: README.md  dependencies.md  implementation-order.md  phase-1-foundation.md  phase-2-trading-accuracy.md  phase-3-risk-management.md  phase-4-user-experience.md  phase-5-platform-reliability.md
app/: main.py  scheduler.py
app/ai/: chatbot.py  router.py  sentiment_analyzer.py  service.py
app/ai/models/: gemini.py
app/ai/tools/: duckduckgo_search.py  get_yfinance_news.py  news_sentiment.py  tavily_search.py
app/auth/: basic_auth.py
app/base/: interface.py
app/base/utils/: mongodb.py
app/bots/: discord_bot.py
app/chainlit/: chainlit.py
app/chainlit/.chainlit/: config.toml
app/db/: __init__.py  models.py  postgres.py  repository.py
app/financial_database/: financial_database.py
app/lib/utils/: pako.py
app/news/: dto.py  router.py  service.py
app/news/example/: alphavantage_news_sentiment_response_example.json
app/notification/: discord_bot.py  router.py  service.py
app/signals/: constants.py  dto.py  hmm_dto.py  hmm_service.py  router.py  service.py
app/signals/services/: __init__.py  backtest_persistence.py  dto_builders.py  notification_handler.py
app/signals/signals_generator/: ema_signals.py  hmm_signals.py  macd_signal_1.py  rsi_signals_windowed.py
app/signals/strategies/: QUICKSTART.md  README.md  adapters.py  base.py  calculate.py  config.py  ema_bollinger.py  ema_bollinger_1_low_risk_backtest.py  ema_bollinger_backtest.py  macd_1_backtest.py  perform_backtest.py  register_strategies.py  registry.py  strategy_list.py  unified_backtest.py  unified_calculator.py
app/signals/strategies/5_min_orb/: __init__.py  five_min_orb_backtest.py  five_min_orb_signals.py  orb-strategy-version-a.md  orb_utils.py
app/signals/strategies/5_min_orb_confirmation/: __init__.py  five_min_orb_confirmation_backtest.py  five_min_orb_confirmation_signals.py  orb-strategy-version-b.md
app/signals/strategies/clf_bollinger_rsi/: clf_bollinger_rsi.py  clf_bollinger_rsi_15m.py  clf_bollinger_rsi_backtest.py  clf_bollinger_rsi_backtest_15m.py  eurjpy_bollinger_rsi_60m.py  eurjpy_bollinger_rsi_60m_backtest.py
app/signals/strategies/double_candle/: __init__.py  double_candle_backtest.py  double_candle_signals.py
app/signals/strategies/ema_bollinger/: ema_bollinger.py  ema_bollinger_backtest.py
app/signals/strategies/ema_bollinger_1_low_risk/: ema_bollinger_1_low_risk_backtest.py
app/signals/strategies/forex_fvg_respected/: fvg_confirmation.py  fvg_confirmation_backtest.py
app/signals/strategies/forex_fvg_respected/ref/: fvg_confirmation_fixed.ipynb
app/signals/strategies/grid_trading/: grid_trading.py  grid_trading_backtest.py
app/signals/strategies/macd_1/: macd_1.py  macd_1_backtest.py
app/signals/strategies/mean_reversion_trend_filter/: __init__.py  mean_reversion_trend_filter.py  mean_reversion_trend_filter_backtest.py  mean_reversion_trend_filter_signals.py
app/signals/strategies/orb_autoresearch/: orb_autoresearch_backtest.py  orb_autoresearch_signals.py
app/signals/strategies/replay/: __init__.py  predefined_trade_strategy.py
app/signals/strategies/super_safe_strategy/: super_safe_strategy.py  super_safe_strategy_backtest.py
app/signals/strategies/swing_1/: __init__.py  constants.py  risk_manager.py  swing.py  swing_backtest.py  swing_signals.py
app/signals/utils/: signals.py  yfinance.py
app/ticker/: dto.py  router.py  service.py
deployment/: deploy.sh
docs/changes/: CHANGES_DOUBLE_CANDLE_STRATEGY.md
docs/plans/: 2026-03-06-swing-1-strategy-restoration-design.md  2026-03-20-orb-strategies-design.md  2026-03-20-orb-strategies-implementation.md
ideas/autoresearch/autoresearch-orb-0.1.0/: orb-manual-trading-playbook.md  strategy.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
public/: index.css
scripts/: setup-hooks.sh  ssh-to-vm-instance.sh
tests/: conftest.py  test_backward_compatibility.py  test_five_min_orb_confirmation_signals.py  test_five_min_orb_signals.py  test_hmm_signals.py  test_mongodb_client.py  test_orb_integration.py  test_orb_utils.py  test_postgres_repository.py  test_scheduler.py  test_services.py  test_strategy_config.py  test_strategy_registry.py  test_unified_backtest.py  test_unified_calculator.py
